--- a/quiz.css
+++ b/quiz.css
@@ -2,23 +2,60 @@
   QUIZ CSS FOR PRODUCT CARDS
 ------------------------------------*/
 
-.container {
-  width: 1200px;
-  margin: auto;
+/* GLOBAL STYLING */
+* {
+  font-family: "Roboto", sans-serif;
 }
 
+/* CARD STYLING */
 .card {
   display: inline-block;
-  width: 390px;
+  vertical-align: top;
+  width: 30%;
+  height: 1000px;
   border: 1px solid lightblue;
-}
-
-.card img {
-  width: 380px;
-  height: 500px;
+  margin: 1.3333%;
 }
 
 .card-header h1 {
   text-align: center;
   border: 1px dotted lightgrey;
+  margin: 0;
+  padding: 30px;
+}
+
+.card img {
+  display: block;
+  width: 330px;
+  height: 450px;
+  margin: auto;
+}
+
+.card-description p {
+  text-align: justify;
+  margin: 0 20px 20px;
+}
+
+.availability p{
+  color: yellow;
+  background-color: #5e5e5e;
+  padding: 4px;
+}
+
+footer h4 {
+  font-weight: 300;
+  font-size: 12px;
+}
+
+.specs {
+  margin-bottom: 10px;
+}
+
+.specs h3 {
+  font-weight: bold;
+  margin: 2px 10px 2px;
+}
+
+.specs p {
+  margin: 0 20px;
 }
